--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="points">Gained 10 points</string>
     <string name="decline">Decline</string>
     <string name="accept">Accept</string>
+    <string name="leave">leave</string>
+    <string name="getjob">Quest</string>
+    <string name="armchallenge">ArmWrestle!</string>
 </resources>
