--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="leave">leave</string>
     <string name="getjob">Quest</string>
     <string name="armchallenge">ArmWrestle!</string>
+    <string name="qtimertext">Assignment</string>
 </resources>
